fixed overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
+    padding: 0;
     gap: 2rem;
 }
 
